# csdt-1822-ki47-KysylevychYurii

./: .gitignore  CMakeLists.txt  README.ML
src/: controller.cpp  controller.h  db_connection.py  globals.h  local_server.py  main.cpp  solver.cpp  solver.h  view.cpp  view.h
test/: CMakeLists.txt  solverTest.cpp  testRunner.cpp
